--- a/src/components/createTopic.scss
+++ b/src/components/createTopic.scss
@@ -1,7 +1,10 @@
 .topicForm{
   background-color: #eceac3;
   border-radius: 4px;
-  width: 50%;
+  width: 30%;
   padding:45px;
   margin-top: 30px;
+  margin-left: 30%;
+  flex-direction: column;
+  display: flex;
 }
