--- a/src/components/createTopic.css
+++ b/src/components/createTopic.css
@@ -1,20 +1,9 @@
 .topicForm {
   background-color: #eceac3;
   border-radius: 4px;
-  width: 50%;
+  width: 30%;
   padding: 45px;
   margin-top: 30px;
-  margin-left: 20%;
+  margin-left: 30%;
   flex-direction: column;
-  display: flex;
- }
-
- input,button {
-   padding: 10px;
-   margin: 5px;
- }
-
-button {
-  color: white;
-  background-color:  blue;
-}
+  display: flex; }
